# Ray-Tracing-OpenGL

./: CMakeLists.txt  README.md  final.docx  main.cpp
bvh/: bvh.cpp  bvh.h
config/: config.cpp  config.h
loader/: loader.cpp  loader.h
material/: material.cpp  material.h
model/: model.cpp  model.h
scene/: scene.cpp  scene.h
shader/: loader.py  render.frag  shader.cpp  shader.h  shaderBuf.h  tracer.frag  tracer.vert
texture/: texture.cpp  texture.h
